Fixed profile pic spacing, centering edit button, padding in previous mealmates table, and max-width/height for pics

--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -39,7 +39,8 @@
 
 #userImage {
     min-width: 275px;
-    max-width: 600px;
+    max-width: 400px;
+    max-height: 400px;
 }
  .upload-btn-wrapper input[type=file] {
      font-size: 100px;
